# InNee

./: .gitignore  Cargo.toml
.github/workflows/: ci-build.yml  ci-pre-test.yml  ci-test.yml  ci.yml
backend/api/common_api/: Cargo.toml
backend/api/common_api/src/: error_dto.rs  error_output_dto.rs  from_request.rs  into_response.rs  lib.rs  register_hadler.rs  user_context.rs
backend/api/common_api/src/dto/: mod.rs  presigned_url_dto.rs
backend/api/lambda/create_apartment_v1/: Cargo.toml
backend/api/lambda/create_apartment_v1/src/: dto.rs  handler.rs
backend/api/lambda/create_apartment_v1/src/dto/: apartment_dto.rs  create_apartment_dto.rs  mod.rs
backend/api/lambda/create_profile_v1/: Cargo.toml
backend/api/lambda/create_profile_v1/src/: handler.rs
backend/api/lambda/create_profile_v1/src/dto/: create_profile_dto.rs
backend/api/lambda/get_profile_v1/: Cargo.toml
backend/api/lambda/get_profile_v1/src/: handler.rs  main.rs
backend/api/lambda/get_profile_v1/src/dto/: profile_dto.rs
backend/api/lambda/hello/: Cargo.toml
backend/api/lambda/hello/src/: main.rs
backend/api/lambda/on_avatar_created/: Cargo.toml
backend/api/lambda/on_avatar_created/src/: handler.rs  main.rs
backend/api/lambda/request_avatar_upload_v1/: Cargo.toml
backend/api/lambda/request_avatar_upload_v1/src/: handler.rs  main.rs
backend/feature/apartment/apartment_domain/: Cargo.toml
backend/feature/apartment/apartment_domain/src/: port.rs
backend/feature/apartment/apartment_domain/src/model/: apartment.rs  apartment_creation.rs  create_apartment_params.rs  mod.rs
backend/feature/apartment/apartment_infra/: Cargo.toml
backend/feature/apartment/apartment_infra/src/: lib.rs  save_apartment.rs
backend/feature/apartment/apartment_infra/src/dto/: apartment_dto.rs  create_apartment_dto.rs  mod.rs
backend/feature/apartment/apartment_infra/src/repository/: get_user_apartments.rs  mod.rs  save_apartment.rs
backend/feature/common/common_domain/: Cargo.toml
backend/feature/common/common_domain/src/: error.rs  lib.rs
backend/feature/common/common_domain/src/models/: mod.rs
backend/feature/common/common_infra/: Cargo.toml
backend/feature/common/common_infra/src/: config.rs  dynamodb_client.rs  lib.rs
backend/feature/profile/profile_domain/src/: port.rs
backend/feature/profile/profile_domain/src/model/: create_profile_params.rs  profile.rs
backend/feature/profile/profile_infra/: Cargo.toml
backend/feature/profile/profile_infra/src/: lib.rs
backend/feature/profile/profile_infra/src/dto/: profile_dto.rs
backend/feature/profile/profile_infra/src/repository/: get_avatar_upload_url.rs  get_profile_by_id.rs  mod.rs  save_profile.rs
backend/macro/with_id/src/: lib.rs
backend/use_case/: Cargo.toml
backend/use_case/src/: create_apartment.rs  get_profile_by_id.rs  lib.rs  request_avatar_upload.rs
infra/base/: main.tf
infra/dev/: main.tf
infra/module/auth-module/: main.tf  output.tf
infra/module/backend-module/: main.tf  variable.tf
infra/module/gateway-module/: main.tf  output.tf  variable.tf
infra/module/in-nee-module/: main.tf  output.tf  variable.tf
infra/module/lambda-module/: main.tf  variable.tf
xtask/: Cargo.toml
xtask/src/command/: build_lambda.rs
xtask/src/util/: hash.rs
