[workspace]
members = [
  "backend/api/lambda/*",
  "backend/api/common_api",
  "xtask",
  "backend/feature/common/*",
  "backend/feature/apartment/*",
  "backend/use_case",
]

[workspace.dependencies]
clap = { version = "4.0" }
futures = { version = "0.3" }
http = { version = "0.2" }
lambda_http = { version = "0.7", default-features = false }
lazy_static = { version = "1.4.0" }
log = { version = "0.4" }
mime = { version = "0.3" }
mockall = { version = "0.11.3" }
paste = { version = "1.0" }
serde = { version = "1.0" }
serde_json = { version = "1.0" }
sha3 = { version = "0.10.6" }
toml = { version = "0.5" }
tokio = { version = "1.22" }
tower-http = { version = "0.3" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }
walkdir = { version = "2.3" }
validator = { version = "0.16" }
zip = { version = "0.6" }
