[workspace]
members = [
  "backend/api/common_api",
  "backend/api/lambda/*",
  "backend/feature/apartment/*",
  "backend/feature/common/*",
  "backend/feature/profile/*",
  "backend/macro/*",
  "backend/use_case",
  "xtask",
]

[workspace.dependencies]
chrono = { version = "0.4" }
proc-macro2 = { version = "1.0" }
aws-config = { version = "0.51" }
aws-sdk-dynamodb = { version = "0.21" }
clap = { version = "4.0" }
futures = { version = "0.3" }
http = { version = "0.2" }
lambda_http = { version = "0.7", default-features = false }
lazy_static = { version = "1.4" }
log = { version = "0.4" }
mime = { version = "0.3" }
mockall = { version = "0.11.3" }
paste = { version = "1.0" }
serde = { version = "1.0" }
serde_dynamo = { version = "4.0" }
serde_json = { version = "1.0" }
sha3 = { version = "0.10" }
toml = { version = "0.5" }
tokio = { version = "1.23" }
tower-http = { version = "0.3" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }
uuid = { version = "1.2" }
walkdir = { version = "2.3" }
syn = { version = "1.0" }
quote = { version = "1.0" }
validator = { version = "0.16" }
zip = { version = "0.6" }
darling = { version = "0.14" }
