[package]
name = "use_case"
version = "0.1.0"
edition = "2021"

[dependencies]
apartment_domain = { path = "../feature/apartment/apartment_domain", optional = true }
common_domain = { path = "../feature/common/common_domain" }
profile_domain = { path = "../feature/profile/profile_domain", optional = true }

[dev-dependencies]
mockall = { workspace = true }

[features]
create_apartment = ["apartment_domain"]
get_profile_by_id = ["profile_domain"]
create_profile = ["profile_domain"]
