[package]
name = "common_api"
version = "0.1.0"
edition = "2021"

[dependencies]
common_domain = { path = "../../feature/common/common_domain" }
http = { workspace = true }
log = { workspace = true }
lambda_http = { workspace = true, features = [
  "apigw_rest",
  "apigw_http",
], optional = true }
mime = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tower-http = { workspace = true, features = ["trace"], optional = true }
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }
validator = { workspace = true }

[features]
lambda = [
  "lambda_http",
  "tracing-subscriber",
  "tracing",
  "tower-http",
  "lambda_http",
  "lambda_http",
]
