[package]
name = "common_api"
version = "0.1.0"
edition = "2021"

[dependencies]
aws_lambda_events = { workspace = true, optional = true }
bucket_domain = { path = "../../feature/bucket/bucket_domain" }
common_domain = { path = "../../feature/common/common_domain" }
http = { workspace = true }
lambda_http = { workspace = true, features = ["apigw_rest"], optional = true }
lambda_runtime = { workspace = true, optional = true }
log = { workspace = true }
mime = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tower-http = { workspace = true, features = ["trace"], optional = true }
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }
validator = { workspace = true }

[features]
lambda = [
  "lambda_http",
  "tracing-subscriber",
  "tracing",
  "tower-http",
  "lambda_runtime",
  "aws_lambda_events",
]
internal_lambda = [
  "tracing-subscriber",
  "tracing",
  "lambda_runtime",
  "aws_lambda_events",
]
