[package]
name = "create_apartment_v1"
version = "0.1.0"
edition = "2021"

[dependencies]
common_api = { path = "../../common_api", features = ["lambda"] }
common_domain = { path = "../../../feature/common/common_domain" }
lambda_http = { workspace = true, features = ["apigw_rest", "apigw_http"] }
log = { workspace = true, features = [
  "max_level_debug",
  "release_max_level_warn",
] }
tokio = { workspace = true }
