[package]
name = "create_apartment_v1"
version = "0.1.0"
edition = "2021"

[dependencies]
apartment_domain = { path = "../../../feature/apartment/apartment_domain" }
apartment_infra = { path = "../../../feature/apartment/apartment_infra" }
common_api = { path = "../../common_api", features = ["lambda"] }
common_domain = { path = "../../../feature/common/common_domain" }
futures = { workspace = true }
lambda_http = { workspace = true, features = ["apigw_rest", "apigw_http"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true }
use_case = { path = "../../../use_case", features = ["create_apartment"] }
validator = { workspace = true, features = ["derive"] }
