[package]
name = "hello"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_http = { workspace = true, features = ["apigw_rest", "apigw_http"] }
tokio = { workspace = true }
tower-http = { workspace = true, features = ["trace"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
