[package]
name = "common_infra"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = { workspace = true, optional = true }
aws-sdk-dynamodb = { workspace = true, optional = true }
lazy_static = { workspace = true }
log = { workspace = true }
tokio = { workspace = true, features = ["parking_lot"] }

[features]
dynamodb = ["aws-sdk-dynamodb", "aws-config"]
